# E2E-LLM-App-with-LCEL

./: .env  .gitignore  pyproject.toml
PoCs/: project_sequence.ipynb
