[project]
name = "e2e-llm-app-with-lcel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.115.6",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.9",
    "langchain-core>=0.3.21",
    "langchain-groq>=0.2.1",
    "langchain>=0.3.9",
    "markdown>=3.7",
    "python-dotenv>=1.0.1",
    "streamlit>=1.40.2",
]
